--- a/Native/libVLC.android/app/src/main/res/layout/activity_main.xml
+++ b/Native/libVLC.android/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
                 android:layout_height="match_parent" />
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Button" />
